# Cluster-Scout

./: .gitattributes  .gitignore  MACOS_DEBUG_HANDOFF.md  README.md  app.py  main.py  pyproject.toml  run.bat  run.command
Output/: mutation_cluster_db.tsv  ptm_mutation_proximity_db.tsv.bak  radius_sweep.tsv
Output/logs/: mutation_cluster_skipped.tsv
data/: 14-3-3 interactors with known P sites.xlsx
docs/: help.md
scripts/: 1_filter.py  2_download_structures.py  3_find_nearby_mutations.py  4_annotate.py  4_annotate_1433pred.py  5_annotate_1433pred.py  6_annotate_polyphen.py  analyze_single_cif_nearby_mutations.py  cif_variance.py  export_ca_coordinates.py  pipeline_utils.py  prototype_hotspot_significance.py  radius_sweep.py
scripts/old/: 4_annotate_1433pred.py  4_merge_htp_ltp.py  5_annotate_polyphen.py  6_annotate_kinases.py
tests/: conftest.py  test_1_filter_cache.py  test_1_filter_cosmic.py  test_1_filter_parsing.py  test_2_download_structures.py  test_3_files.py  test_3_geometry.py  test_3_parsing.py  test_4_annotate_1433pred.py  test_4_annotate_aiupred.py  test_4_annotate_interpro.py  test_4_annotate_kinase.py  test_4_annotate_long_format.py  test_4_annotate_polyphen_filter.py  test_5_annotate_1433pred.py  test_5_annotate_polyphen.py  test_analyze_single_cif_nearby_mutations.py  test_cif_variance.py  test_export_ca_coordinates.py  test_pipeline_utils.py  test_radius_sweep.py  test_single_protein_append.py
ui/: analysis_tools_tab.py  common.py  help_tab.py  pipeline_panels.py  pipeline_runner.py  results_tab.py  visualization_tab.py
(+1 files in other folders)
