[project]
name = "cluster-scout"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.84",
    "biotite>=1.6.0",
    "customtkinter>=5.2.2",
    "matplotlib>=3.9.0",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/old"]
